# project_datapulse

./: .gitignore  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
dashboard/: app.py
data/: datapulse.duckdb
data/processed/: weather.parquet
infra/: README.md  github.tf  main.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf
reports/: latest_run.json
src/datapulse/: __init__.py  config.py  contract.py  ingest.py  observability.py  pipeline.py  storage.py  transform.py
tests/: conftest.py  test_anomaly.py  test_contract.py  test_storage.py  test_transform.py
