[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datapulse"
version = "0.1.0"
description = "A self-monitoring data pipeline with built-in observability and Infrastructure-as-Code."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DataPulse" }]
dependencies = [
    "requests>=2.31",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "duckdb>=0.10",
    "pandera>=0.18",
    "boto3>=1.34",
    "pyyaml>=6.0",
    "streamlit>=1.31",
    "altair>=5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
datapulse = "datapulse.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "dashboard"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
